test/good/functions/default01.px

f = default(Int->Rat)
print f(0), f(1).fraction
