test/bad/classes/method08.px

class A def
    func f() Int def
        return 0

A->Int f = A().f
